/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'checkstyle'
    id 'pmd'
    id 'signing'
}

allprojects {
    group = 'com.lodsve.boot'
    version = '1.0.3-SNAPSHOT'

    repositories {
        mavenLocal()
        maven { url 'https://maven.aliyun.com/repository/public' }
        mavenCentral()
    }
}

subprojects {
    if (name == 'lodsve-boot-dependencies') {
        return
    }

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'checkstyle'
    apply plugin: 'pmd'

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs << "-Xlint:unchecked"
    }

    checkstyle {
        toolVersion = '8.42'
        configFile = rootProject.file("tools/check-style.xml")
        ignoreFailures = true
        showViolations = true
    }

    pmd {
        toolVersion = '6.55.0' // 对应 maven-pmd-plugin 3.13.0 默认版本，或可调整
        ruleSets = [rootProject.file("tools/pmd-ruleset.xml").absolutePath]
        ignoreFailures = true // Maven配置中 printFailingErrors=true 可能意味着只打印不失败，保留Maven行为
        consoleOutput = true
    }

    java {
        withSourcesJar()
        withJavadocJar()
    }

    javadoc {
        options.encoding = 'UTF-8'
        options.charSet = 'UTF-8'
        options.docEncoding = 'UTF-8'
        options.windowTitle = 'Lodsve Boot JavaDocs'
        options.docTitle = 'Lodsve Boot JavaDocs'
        options.locale = 'zh_CN'
        // ignore javadoc errors
        failOnError = false
    }
    
    // 配置发布
    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
                
                pom {
                    name = project.name
                    description = 'Lodsve develop kits base on Spring-Boot and some opensource components!'
                    url = 'https://github.com/lodsve/lodsve-boot'
                    inceptionYear = '2020'
                    
                    licenses {
                        license {
                            name = 'The Apache Software License, Version 2.0'
                            url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                        }
                    }
                    
                    developers {
                        developer {
                            id = 'sunhao'
                            name = '孙昊'
                            email = 'sunhao.java@gmail.com'
                            roles = ['creator', 'manager', 'developer', 'committer']
                        }
                    }
                    
                    scm {
                        connection = 'scm:git:git@github.com:lodsve/lodsve-boot.git'
                        developerConnection = 'scm:git:git@github.com:lodsve/lodsve-boot.git'
                        url = 'https://github.com/lodsve/lodsve-boot/tree/master'
                    }
                }
            }
        }
        
        repositories {
            maven {
                def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
                def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
                credentials {
                    username = project.findProperty("ossrhUsername") ?: System.getenv("OSSRH_USERNAME")
                    password = project.findProperty("ossrhPassword") ?: System.getenv("OSSRH_PASSWORD")
                }
            }
        }
    }
}
